--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test-dot": "node ./tests/tests.test.js | tap-dot; true",
-    "test-faucet": "node ./tests/tests.test.js | faucet; true",
-    "test-diff": "node ./tests/tests.test.js | tap-diff; true",
+    "test-dot": "node ./tests/reducer.test.js | tap-dot; true",
+    "test-faucet": "node ./tests/reducer.test.js | faucet; true",
+    "test-diff": "node ./tests/reducer.test.js | tap-diff; true",
     "test": "npm run test-diff"
   },
   "author": "",
